--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<div align="center">
 		<button class="btn btn-info"
-			onclick="location.href='./views/Devops_Metrics.html'">Show DevOps Metrics
+			onclick="location.href='./views/Devops_Metrics.html'">DevOps Metrics
 		</button>
 	</div>
 	<footer class='footer'>
@@ -43,7 +43,7 @@
 			<a href="./views/Release_History.html">Release History</a>
 			<p class='pull-right'>
 				Capability Demonstration by 
-				<a href='https://github.com/veersudhir83/predix-static-app/'>Sudheer Veeravalli</a> 
+				<a href='https://github.com/veersudhir83'>Sudheer Veeravalli</a>
 			</p>
 		</div>
 	</footer>
